Update Segmenting and Clustering Neighborhoods in Toronto Week 3 - 1.ipynb

--- a/Segmenting and Clustering Neighborhoods in Toronto Week 3 - 1.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto Week 3 - 1.ipynb
@@ -157,7 +157,7 @@
     "# rawpage = requests.get('https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M')\n",
     "wikizeroourl = 'http://www.wikizeroo.net/index.php?q=aHR0cHM6Ly9lbi53aWtpcGVkaWEub3JnL3dpa2kvTGlzdF9vZl9wb3N0YWxfY29kZXNfb2ZfQ2FuYWRhOl9N'\n",
     "\n",
-    "rawpage = requests.get(wikizerourl)\n",
+    "rawpage = requests.get(wikizeroourl)\n",
     "soup = BeautifulSoup(rawpage.text, 'html.parser')\n",
     "table = soup.find('table', {'class': \"wikitable sortable\"})\n",
     "ths = table.find_all('th')\n",
